<resources>
    <string name="app_name">Clima</string>
    <string name="texto_grados">27°</string>
    <string name="texto_ciudad">Felipe Carrillo Puerto</string>
    <string name="texto_estatus">Soleado</string>
    <string name="texto_bienvenida">Bienvenido a mi app del clima. Para poder ver el clima de una ciudad selecciona la opción de abajo.</string>
    <string name="texto_boton_fcp">Clima de Ciudad de Felipe Carrillo Puerto</string>
    <string name="texto_boton_cht">Clima de la Ciudad de Chetumal</string>
    <string name="texto_boton_tulum">Clima de la Ciudad de Tulum</string>
    <string name="texto_boton_coz">Clima de la Ciudad de Cozumel</string>
</resources>